# Pastebin

Pastebin/: .env  Cargo.toml  README.md  app.vue  error.vue  nuxt.config.ts  package.json  tailwind.config.ts  vercel.json
Pastebin/api/: main.rs
Pastebin/assets/css/: animations.css  main.css  utilities.css
Pastebin/components/: CyberAlert.vue
